--- a/chain-bee-dashboard/package.json
+++ b/chain-bee-dashboard/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tooltip": "^4.4.0",
     "react-use-observable": "^1.0.4",
     "rxjs": "^7.5.6"
   },
