--- a/chain-bee-network/redbee-network/docker-compose-cli-couchdb.yaml
+++ b/chain-bee-network/redbee-network/docker-compose-cli-couchdb.yaml
@@ -102,7 +102,7 @@ services:
       - basic
 
   cli:
-    container_name: cli-capitalHumano
+    container_name: cli
     image: hyperledger/fabric-tools:2.4
     tty: true
     stdin_open: true
